# python-project-template

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-reports.yml  feature-reqests.yml
.github/workflows/: publish.yml
docs/: development-guide.md  doc-strings.md
