[project]
name = "project"
version = "0.0.0"
description = "Project"
authors = [{ name = "Veicm" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "mypy>=1.5.0",
  "ruff>=0.4.0",
  "pre-commit>=3.0.0",
  "build>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/project"]

[tool.setuptools.packages.find]
where = ["src"]
